k8s/base/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-portfolio
  labels:
    app: devops-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-portfolio
  template:
    metadata:
      labels:
        app: devops-portfolio
    spec:
      containers:
        - name: web
          image: ghcr.io/shadim-devops/devops-portfolio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      restartPolicy: Always
