k8s/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio
  labels:
    app: devops-portfolio
spec:
  type: ClusterIP
  selector:
    app: devops-portfolio
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
